k8chart/templates/ontostring-ingress-withui.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: ontostring-ingress
  namespace: ontotools
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "30m"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /spot/ontostring(/|$)(.*)
        backend:
          serviceName: ontostring
          servicePort: 8080
